gitops-demo/apps/argocd-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd-demo
  labels:
    managed-by: argocd
