gitops-demo/apps/argocd-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-argocd
  namespace: argocd-demo
  labels:
    app: nginx-argocd
    managed-by: argocd
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-argocd
  template:
    metadata:
      labels:
        app: nginx-argocd
        managed-by: argocd
    spec:
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 100m
              memory: 64Mi
      volumes:
        - name: html
          configMap:
            name: nginx-index
