gitops-demo/apps/argocd-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-argocd
  namespace: argocd-demo
  labels:
    app: nginx-argocd
    managed-by: argocd
spec:
  selector:
    app: nginx-argocd
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
